--- a/Server/Server2/Properties/launchSettings.json
+++ b/Server/Server2/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:43656",
+      "applicationUrl": "http://192.168.0.103:43656",
       "sslPort": 44331
     }
   },
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5014",
+      "applicationUrl": "http://192.168.0.103:5014",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "user",
-      "applicationUrl": "https://localhost:7057;http://localhost:5014",
+      "applicationUrl": "https://192.168.0.103:7057;http://192.168.0.103:5014",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
